[tool.poetry]
name = "DrTodo"
version = "0.5.2"
description = "DrTodo, MD: todo list manager using markdown files and git"
authors = ["exilium <info@exilium.com>"]
readme = "drtodo/README.md"
license = "MIT"

[tool.poetry.scripts]
todo = "drtodo.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "*"
rich = "*"
pydantic = "*"
tomli = {version = "*", python = "<3.11"}
gitpython = "*"
mistune = {version = "3.0.0rc5", allow-prereleases = true}
typing-extensions = {version = "^4.5.0", python = "<3.11"}

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "^6.0.0"

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
